Updated to Pet's name

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charse="utf-8">
+        <meta charset="utf-8">
         <title>lab 1</title>
     </head>
     <body>
         <h1>Keiko Tully - lab 1
         </h1>
-        <p> My current
+        <p> My current favorite hobby is ballet dancing.  
+            <br>I go to the adult ballet class on every Thrusdays night.
+            <br>We are learning how to pirouette, which is one leg turn.  
+            <br>It is hard to ballance!  I practice every day in my kitchen at home while I'm cooking.
+        </p>
+        <h3>This is my list of funny pet's name
+        </h3>
             <ul>
-                <li>ballet</li>
-                <li></li>
-                <li></li>
-                <li></li>
-
+                <li>Stinky</li>
+                <li>Nugget</li>
+                <li>Jiji</li>
+                <li>Kuro</li>
+                <li>Pancake</li>
             </ul>
     </body>
 </html>
